src/objects/APTS_Historical_Price_Change__c.object
<CustomObject>
    <fields>
        <fullName>APTS_AssetLineItem__c</fullName>
        <label>Asset Line Item</label>
        <referenceTo>Apttus_Config2__AssetLineItem__c</referenceTo>
        <relationshipLabel>Historical Price Changes</relationshipLabel>
        <relationshipName>Historical_Price_Changes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>APTS_Duration1__c</fullName>
        <description>Selling term: difference between start date and end date.</description>
        <label>Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Duration__c</fullName>
        <formula>(YEAR(APTS_End_date__c) - YEAR(APTS_Start_date__c) - IF(MONTH(APTS_End_date__c) &lt; MONTH(APTS_Start_date__c),1,0))*12

+

(MONTH(APTS_End_date__c) - MONTH(APTS_Start_date__c) + IF(DAY(APTS_End_date__c) &gt; DAY(APTS_Start_date__c),12,0))

+

IF(DAY(APTS_End_date__c) &gt; DAY(APTS_Start_date__c),DAY(APTS_End_date__c) - DAY(APTS_Start_date__c),DAY(APTS_Start_date__c) - DAY(APTS_End_date__c))/30</formula>
        <label>Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_End_date__c</fullName>
        <label>End date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Isinactive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Inactive Historical Price change record</description>
        <label>Isinactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Net_Price__c</fullName>
        <label>Net Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Price__c</fullName>
        <formula>(APTS_Net_Price__c / APTS_Selling_term__c) *  APTS_Duration1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Selling_Frequency__c</fullName>
        <label>Selling Frequency</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Selling_term__c</fullName>
        <label>Selling term</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Start_date__c</fullName>
        <label>Start date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Timestamp__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Timestamp</label>
        <type>DateTime</type>
    </fields>
    <label>Historical Price Change</label>
    <nameField>
        <label>Historical Price Change Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Historical Price Changes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>